--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -128,7 +128,6 @@
     </div>
     <ul class='item-lists'>
 
-      <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
       <% if @items.present? %> 
         <% @items.each do |item| %>
           <li class='list'>
@@ -137,9 +136,9 @@
               <%= image_tag item.image, class: "item-img" %>
 
               <%# 商品が売れていればsold outを表示しましょう %>
-              <div class='sold-out'>
+              <%# <div class='sold-out'>
                 <span>Sold Out!!</span>
-              </div>
+              </div> %>
               <%# //商品が売れていればsold outを表示しましょう %>
 
             </div>
@@ -158,10 +157,6 @@
             <% end %>
           </li>
         <% end %>
-      <%# //商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
-
-      <%# 商品がない場合は以下のダミー商品が表示されるようにしましょう %>
-      <%# 商品がある場合は表示されないようにしましょう %>
        <% else %> 
         <li class='list'>
           <%= link_to '#' do %>
@@ -181,8 +176,6 @@
           <% end %>
         </li>
        <%end%> 
-      <%# //商品がある場合は表示されないようにしましょう %>
-      <%# //商品がない場合は以下のダミー商品が表示されるようにしましょう %>
     </ul>
   </div>
   <%# /商品一覧 %>
