--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -147,7 +147,7 @@
                 <%= item.item_name %>
               </h3>
               <div class='item-price'>
-                <span><%= item.price %>円<br><%= item.condition.name %></span>
+                <span><%= item.price %>円<br><%= item.shipping_fee.name %></span>
                 <div class='star-btn'>
                   <%= image_tag "star.png", class:"star-icon" %>
                   <span class='star-count'>0</span>
